# mamood-django-admin-log-viewer

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  MIGRATION_SUMMARY.md  README.md  __init__.py  create_demo.py  example_settings.py  pyproject.toml  release_notes_v2.0.2.md  release_notes_v2.0.4.md  setup.py  test_multiline_debug.py  test_pagination.py  test_regex_debug.py
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
django_admin_log_viewer/: __init__.py  admin.py  apps.py  tests.py  urls.py  views.py
django_admin_log_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_admin_log_viewer/templates/django_admin_log_viewer/: log_detail.html  log_list.html
log_viewer/: __init__.py  admin.py  apps.py  middleware.py  tests.py  urls.py  utils.py  views.py
log_viewer/static/log_viewer/css/: log_viewer.css
log_viewer/static/log_viewer/js/: log_viewer.js
log_viewer/templates/log_viewer/: log_detail.html  log_list.html
mamood_django_admin_log_viewer/: __init__.py  admin.py  utils.py
mamood_django_admin_log_viewer/static/mamood_django_admin_log_viewer/css/: log_viewer.css
mamood_django_admin_log_viewer/static/mamood_django_admin_log_viewer/js/: log_viewer.js
mamood_django_admin_log_viewer/templates/mamood_django_admin_log_viewer/: log_detail.html
myproject/: requirements.txt
myproject/logs/: application.log.1  django.log.1  django.log.2
myproject/myproject/: settings.py
myproject/testapp/: admin.py  models.py
myproject/testapp/migrations/: 0001_initial.py
tests/: __init__.py  test_django_integration.py  test_multiline_debug.py  test_pagination_multiline.py
