[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-log-viewer"
version = "2.0.0"
authors = [{name = "Amirhossein Mahmoudi", email = "am.mahmoudi@outlook.com"}]
description = "A powerful Django app for viewing and monitoring log files in the admin panel with multi-line support, real-time updates, and configurable formats"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "django", "admin", "log", "viewer", "monitoring", "debugging", 
    "real-time", "multi-line", "stack-trace", "celery", "nginx", 
    "apache", "log-rotation", "log-parsing", "log-analysis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Web Environment",
]
dependencies = ["Django>=3.2"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/ammahmoudi/django-admin-log-viewer"
Repository = "https://github.com/ammahmoudi/django-admin-log-viewer"
Issues = "https://github.com/ammahmoudi/django-admin-log-viewer/issues"
Documentation = "https://github.com/ammahmoudi/django-admin-log-viewer#readme"

[tool.setuptools.packages.find]
exclude = ["tests*", "myproject*"]

[tool.setuptools.package-data]
django_admin_log_viewer = [
    "static/django_admin_log_viewer/css/*.css",
    "static/django_admin_log_viewer/js/*.js", 
    "templates/django_admin_log_viewer/*.html",
    "templatetags/*.py",
]
